--- a/css/style.css
+++ b/css/style.css
@@ -14,3 +14,20 @@ body{
 .center img{
     margin-top: 30px;
 }
+
+.col-xs-12 img{
+width:100%;
+}
+
+#the-basics{
+    font-size:3em;
+}
+#the-basics input{
+    margin-left: 50px;
+}
+
+.tt-suggestion .tt-selectable{
+    margin-left:50px;
+}
+
+
